--- a/Hora do Dia/style.css
+++ b/Hora do Dia/style.css
@@ -1,5 +1,5 @@
 body{
-    background: rgb(98, 108, 112);
+    background: rgb(116, 194, 224);
     font: normal 15pt Arial;
 }
 header{
@@ -15,6 +15,10 @@ section{
     margin: auto;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.404);
 
+}
+div {
+    text-align: center;
+    padding: 8px;
 }
 footer{
     color: white;
